# code-navigator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  Makefile  README.md  SKILL.md  architecture-diagram.md  code-map-navigator.skill  dev-requirements.txt  mcp-server.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  trigger-mcp-deploy.yml
docs/: MCP_INTEGRATION.md  advanced-usage.md  api-reference.md  faq.md  plan-tree-sitter-dart.md  troubleshooting.md
examples/: README.md  claude-code-config.json  claude-desktop-config.json  sample_codenav.json
rust/codenav_core/: Cargo.toml
rust/codenav_core/src/: hub_detection.rs  import_resolver.rs  lib.rs  pagerank.rs
scripts/: build_dart_grammar.sh
skills/code-map-navigator/: SKILL.md
skills/code-map-navigator/references/: advanced-usage.md  api-reference.md  cli-usage.md  mcp-integration.md  troubleshooting.md
skills/code-navigator/: SKILL.md
skills/code-navigator/references/: advanced-usage.md  api-reference.md  cli-usage.md  troubleshooting.md
skills/code-navigator/scripts/: install.sh
src/code_map_navigator/: __init__.py  cli.py  code_mapper.py  code_search.py  colors.py  completions.py  exporters.py  js_ts_analyzer.py  line_reader.py  watcher.py
src/codenav/: __init__.py  ast_grep_analyzer.py  call_extraction.py  cli.py  code_navigator.py  code_search.py  colors.py  completions.py  dart_analyzer.py  dependency_graph.py  exporters.py  go_analyzer.py  import_resolver.py  js_ts_analyzer.py  line_reader.py  ruby_analyzer.py  rust_analyzer.py  token_efficient_renderer.py  watcher.py
src/codenav/mcp/: __init__.py  __main__.py  server.py
tests/: README.md  __init__.py  test_ast_grep_wiring.py  test_call_extraction.py  test_cli.py  test_code_mapper.py  test_code_navigator.py  test_code_search.py  test_core_imports.py  test_coverage_stats.py  test_dart_analyzer.py  test_dependency_graph.py  test_extras.py  test_go_analyzer.py  test_import_resolver.py  test_js_ts_analyzer.py  test_line_reader.py  test_ruby_analyzer.py  test_rust_analyzer.py  test_token_efficient_renderer.py
tests/fixtures/: sample_dart.dart  sample_go.go  sample_javascript.js  sample_python.py  sample_ruby.rb  sample_rust.rs  sample_typescript.ts
